--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -4,19 +4,40 @@
   background-color: @background;
   color: @foreground;
 
+  background: transparent;
   border: none;
-  border-radius: 0;
+  border-radius: 1.0rem;
   min-height: 0;
   font-family: 'JetBrainsMono Nerd Font';
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .modules-left {
-  margin-left: 8px;
-}
+  background-color: @background;
+  margin: 2px; 
+  padding: 8px; 
+  padding-left: 18; 
+  padding-right: 10; 
+  border-radius: 1.0rem; 
+  transition: none;}
 
 .modules-right {
-  margin-right: 8px;
+  background-color: @background;
+  margin: 2px; 
+  padding: 2px; 
+  padding-left: 18; 
+  padding-right: 10; 
+  border-radius: 1.0rem; 
+  transition: none;}
+
+.modules-center {
+  background-color: @background;
+  margin: 2px; 
+  padding: 2px; 
+  padding-left: 18; 
+  padding-right: 10; 
+  border-radius: 1.0rem; 
+  transition: none;
 }
 
 #workspaces button {
@@ -65,7 +86,7 @@ tooltip {
 }
 
 #clock {
-  margin-left: 8.75px;
+  margin-left: 0px;
 }
 
 .hidden {
